discussion/kv_engine/177001/177001_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Move throttle_test to its own test suite

Change-Id: Ic55623bb6a5c7fd4e7ab87fb391d1c9cb1e29057

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 08:00:18.000000000
Message: 
Uploaded patch set 3: Patch Set 2 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 09:23:34.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47292/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [73/160]: disk>RAM golden path.....\kv_engine\engines\ep\tests\ep_testsuite.cc:4296 Test failed: `" (Expected `172", got `92" - kv_size should have returned to initial value after restoring evicted item)
(69 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47292/ )

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.950301\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (46 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47292/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18532/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:23:21: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
        auto conn = cluster->getConnection(0);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
    std::vector<std::thread> threads;
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:58:30: error: C++ requires a type specifier for all declarations [clang-diagnostic-error]
    std::vector<std::thread> threads;
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/throttle_test.cc:61:22: error: no member named "thread" in namespace "std" [clang-diagnostic-error]
                std::thread{[func, name = "bucket-" + std::to_string(ii)]() {
                     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18532/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18532/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28797/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28797/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8203/ : FAILURE

Compile error at [2022-07-03T08:12:06.730Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8203/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17685/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39744/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19638/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8302/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20764/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21404/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
